// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button executes callback 1`] = `
<button
  className="button,yoast-button sc-bdVaJa eswEHi"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`Button executes callback 2`] = `
<button
  className="button,yoast-button sc-bdVaJa eswEHi"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`SnippetPreviewButton executes callback 1`] = `
<button
  className="button,yoast-button sc-bdVaJa eswEHi"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`SnippetPreviewButton executes callback 2`] = `
<button
  className="button,yoast-button sc-bdVaJa eswEHi"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`the Button matches the snapshot 1`] = `
<button
  className="button,yoast-button sc-bdVaJa eswEHi"
  type="button"
>
  ButtonValue
</button>
`;

exports[`the SnippetPreviewButton matches the snapshot 1`] = `
<button
  className="button,yoast-button sc-bdVaJa eswEHi"
  type="button"
>
  ButtonValue
</button>
`;
